--- a/html/css/style.css
+++ b/html/css/style.css
@@ -1,11 +1,22 @@
 @font-face {
-	font-family: 'Beauty1';
-	src: url('BeautyDemo.ttf') format('truetype');
+	font-family: 'Beauty';
+	src: url(../../fonts/BeautyDemo.otf) format('truetype'), url(../../fonts/BeautyDemo.otf) format('opentype');
+	font-weight: normal;
+	font-style: normal;
 }
 
 @font-face {
-	font-family: 'Beauty2';
-	src: url('BeautyDemo.otf') format('truetype');
+	font-family: 'Calinastiya';
+	src: url(../../fonts/Calinastiya\ demo.ttf) format('truetype');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Royal';
+	src: url(../../fonts/Royalty\ DEMO.ttf) format('truetype');
+	font-weight: normal;
+	font-style: normal;
 }
 
 * {
@@ -14,9 +25,6 @@
 }
 
 html, body {
-	max-width: 100%;
-	overflow-x: hidden;
-	overflow-y: hidden;
 	background-color: rgb(244,242,236);
     text-align: center;
 }
@@ -30,14 +38,20 @@ header {
 }
 
 h1 {
-	font-family: 'Beauty2';
+	font-family: 'Royal';
+	color: rgb(227, 153, 165);
+	font-size: 4em;
+	margin-top: 20px;
+}
+
+.entrada {
+	padding-bottom: 20px;
 }
 
 .welcome {
     background-color: rgb(235,234,231);
     padding: 5vh;
-    font-size: 2.5em;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Beauty';
 }
 
 nav {
@@ -49,6 +63,7 @@ nav {
     align-items: center;
 	column-gap: 10px;
 	row-gap: 10px;
+	margin-bottom: 20px;
 }
 
 nav > a {
@@ -57,124 +72,124 @@ nav > a {
     margin: auto;
 }
 
+nav a:active {
+	color: pink;
+}
+
+nav a:focus{
+	color: pink;
+}
+
+nav a:hover {
+	color: pink;
+}
+
 h2 {
     color: rgb(121,37,61);
+	font-size: 4em;
 }
 
-#slideshow {
-	margin: 0 auto;
-	padding-top: 50px;
-	height: 600px;
-	width: 100%;
-	background-color: rgb(235,234,231);
-	box-sizing: border-box;
+h3 {
+	color: rgb(121,37,61);
+	font-family: 'Royal';
+	font-size: 4em;
+	margin-top: 1.2em;
 }
 
-.slideshow-title {
-	font-family: 'Allerta Stencil';
-	font-size: 62px;
-	color: #fff;
-	margin: 0 auto;
-	text-align: center;
-	margin-top: 25%;
-	letter-spacing: 3px;
-	font-weight: 300;
+.trabalho {
+	display: flex;
+	flex-wrap: wrap;
+	column-gap: 10px;
+	row-gap: 20px;
+	justify-content: space-around;
 }
 
-.sub-heading {
-	padding-top: 50px;
-	font-size: 18px;
-} .sub-heading-two {
-	font-size: 15px;
-} .sub-heading-three {
-	font-size: 13px;
-} .sub-heading-four {
-	font-size: 11px;
-} .sub-heading-five {
-	font-size: 9px;
-} .sub-heading-six {
-	font-size: 7px;
-} .sub-heading-seven {
-	font-size: 5px;
-} .sub-heading-eight {
-	font-size: 3px;
-} .sub-heading-nine {
-	font-size: 1px;
+.background-trabalho {
+	background-image: url(../../img/pinceis.jpg);
+	background-color: black;
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-attachment: fixed;
+	padding-bottom: 30px;
 }
 
-.entire-content {
-	margin: auto;
-	width: 190px;
-	perspective: 1000px;
+.background-trabalho .layout {
 	position: relative;
-	padding-top: 80px;
+	box-shadow: 0 10px 20px rgba(0, 0, 0, 0.839);
+	color: rgb(255, 254, 254);
 }
 
-.content-carrousel {
-	width: 100%;
+.background-trabalho .layout::before {
 	position: absolute;
-	float: right;
-	animation: rotar 15s infinite linear;
-	transform-style: preserve-3d;
+	background: url(../../img/pinceis.jpg);
+	background-attachment: fixed;
+	filter: blur(10px);
 }
 
-.content-carrousel:hover {
-	animation-play-state: paused;
-	cursor: pointer;
+.background-trabalho .layout h3 {
+	position: relative;
 }
 
-.content-carrousel figure {
-	width: 100%;
-	height: 120px;
-	border: 1px solid #3b444b;
-	overflow: hidden;
-	position: absolute;
+.background-trabalho .layout img {
+	position: relative;
 }
 
-.content-carrousel figure:nth-child(1) {
-	transform: rotateY(0deg) translateZ(300px); 
-} .content-carrousel figure:nth-child(2) {
-	transform: rotateY(40deg) translateZ(300px); 
-} .content-carrousel figure:nth-child(3) {
-	transform: rotateY(80deg) translateZ(300px); 
-} .content-carrousel figure:nth-child(4) {
-	transform: rotateY(120deg) translateZ(300px); 
-} .content-carrousel figure:nth-child(5) {
-	transform: rotateY(160deg) translateZ(300px); 
-} .content-carrousel figure:nth-child(6) {
-	transform: rotateY(200deg) translateZ(300px); 
-} .content-carrousel figure:nth-child(7) {
-	transform: rotateY(240deg) translateZ(300px); 
-} .content-carrousel figure:nth-child(8) {
-	transform: rotateY(280deg) translateZ(300px); 
-} .content-carrousel figure:nth-child(9) {
-	transform: rotateY(320deg) translateZ(300px); 
-} .content-carrousel figure:nth-child(10) {
-	transform: rotateY(360deg) translateZ(300px); 
-} 
-
-.shadow {
-    position: absolute;
-    box-shadow: 0px 0px 20px 0px #000;
-    border-radius: 1px;
+.background-trabalho .layout button {
+	position: relative;
 }
 
-.content-carrousel img {
-	image-rendering: auto;
-	transition: all 300ms;
-	width: 100%;
-	height: 100%;
+.trabalho img {
+	width: 30vw;
+	border-radius: 10px;
+	margin: 2px;
 }
 
-.content-carrousel img:hover {
-	transform: scale(1.2);
-	transition: all 300ms;
+.agendamento {
+	color: rgb(200, 73, 94);
 }
 
-@keyframes rotar {
-	from {
-		transform: rotateY(0deg);
-	} to {
-		transform: rotateY(360deg);
-	}
+.agendamento button {
+	border-radius: 20px;
+	padding: 3px;
+	border-color: pink;
+	background-color: rgba(255, 192, 203, 0.676);
+}
+
+.agendamento button img {
+	width: 20px;
+	background-color: rgba(255, 192, 203, 0.676);
+}
+
+.equipe {
+	margin-top: 30px;
+	display: flex;
+	column-gap: 50px;
+	row-gap: 20px;
+	justify-content: space-around;
+	flex-wrap: wrap;
+}
+
+.equipe .card {
+	width: 40vw;
+	background-color: rgba(0, 0, 0, 0.128);
+	border-radius: 10px;
+}
+
+.equipe .card img {
+	border-radius: 10px;
+}
+
+.equipe .card a {
+	color: rgb(209, 72, 95);
+	text-decoration: none;
+}
+
+footer {
+	margin-top: 20px;
+}
+
+footer p {
+	font-size: 0.8em;
+	color: rgba(0, 0, 0, 0.256);
 }
